--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
@@ -35,6 +37,7 @@
     },
     "rules": {}
   },
+  "proxy": "http://127.0.0.1:8000",
   "browserslist": [
     "> 1%",
     "last 2 versions",
