--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
